# skyline-update-hacky-directory-support

./: README.md
skyline-update/: Cargo.toml
skyline-update/src/: lib.rs
update-server/src/: hosted_plugins.rs  main.rs
